lib/tests/ui/log_macros_no_args.rs
use lib_common::log_macros;

log_macros!();

fn main() {}
